--- a/config.yml
+++ b/config.yml
@@ -22,7 +22,7 @@ template: "simple"
 
 repositories: 
   adhril : 
-    path : /opt/repos/Adhril.com
+    path : /opt/repos/adhril.com
   mki : 
     path : /opt/repos/mki
 
